@@ -1,7 +1,5 @@
 <?xml version='1.0'?>
-<interface xmlns='http://zero-install.sourceforge.net/2004/injector/interface'
-	   uri='http://rox.sourceforge.net/2005/interfaces/ROX-Session'
-	   main='ROX-Session/AppRun'>
+<interface xmlns='http://zero-install.sourceforge.net/2004/injector/interface'>
   <name>ROX-Session</name>
   <summary>sets up a ROX desktop session</summary>
   <description>
@@ -16,7 +14,7 @@ managers without logging out.
   <feed-for interface='http://rox.sourceforge.net/2005/interfaces/ROX-Session'/>
 
   <icon type='image/png' href='http://rox.sourceforge.net/Icons/ROX-Session.png'/>
-  <group>
+  <group main='AppRun'>
     <requires interface="http://rox.sourceforge.net/2005/interfaces/ROX-Defaults">
       <environment insert="bin" name="PATH" default="/bin:/sbin"/>
       <!-- Hack to get around the injector not supporting default values! -->
@@ -26,6 +24,6 @@ managers without logging out.
       <environment insert="ROX-Lib2/python" name="PYTHONPATH"/>
     </requires>
 
-    <implementation version="0.26.0" stability='testing' id=".."/>
+    <implementation version="0.27" stability='testing' id="."/>
   </group>
 </interface>
